--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,16 +57,25 @@ android {
 }
 
 dependencies {
+    // Retrofit
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.0'
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
 
+    // Data and System
     implementation 'androidx.core:core-ktx:1.10.1'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
     implementation 'androidx.activity:activity-compose:1.7.1'
     implementation "io.coil-kt:coil-compose:2.2.0"
     implementation "com.google.accompanist:accompanist-coil:0.11.1"
+    implementation "androidx.compose.runtime:runtime-livedata:1.4.3"
 
+    // UI
     implementation "androidx.compose.ui:ui:$compose_ui_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_ui_version"
     implementation "androidx.compose.material:material:$compose_ui_version"
+
+    // Runtime
     implementation 'androidx.navigation:navigation-runtime-ktx:2.5.3'
 
 
