--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-android'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -64,11 +66,13 @@ dependencies {
 
     // Data and System
     implementation 'androidx.core:core-ktx:1.10.1'
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
-    implementation 'androidx.activity:activity-compose:1.7.1'
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.6.1"
     implementation "io.coil-kt:coil-compose:2.2.0"
     implementation "com.google.accompanist:accompanist-coil:0.11.1"
     implementation "androidx.compose.runtime:runtime-livedata:1.4.3"
+
+    // Navigation
+    implementation "androidx.navigation:navigation-compose:2.5.3"
 
     // UI
     implementation "androidx.compose.ui:ui:$compose_ui_version"
@@ -77,6 +81,13 @@ dependencies {
 
     // Runtime
     implementation 'androidx.navigation:navigation-runtime-ktx:2.5.3'
+    implementation "androidx.compose.runtime:runtime:1.4.3"
+    implementation 'androidx.activity:activity-compose:1.7.1'
+
+    // Foundation
+    implementation "androidx.compose.foundation:foundation:1.4.3"
+    implementation "androidx.compose.foundation:foundation-layout:1.4.3"
+    implementation "androidx.compose.animation:animation:1.4.3"
 
 
     testImplementation 'junit:junit:4.13.2'
