--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-android'
     id 'kotlin-kapt'
+    id("org.jetbrains.dokka") version "1.8.10"
 }
 
 android {
@@ -114,7 +115,9 @@ dependencies {
     testImplementation "androidx.arch.core:core-testing:2.2.0"
 
     // Coroutine
-
     testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4"
     androidTestImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.4"
+
+    // Documentation
+    dokkaPlugin("org.jetbrains.dokka:android-documentation-plugin:1.8.10")
 }
