--- a/app/build.gradle
+++ b/app/build.gradle
@@ -99,6 +99,7 @@ dependencies {
     // Room
     implementation 'androidx.room:room-runtime:2.5.1'
     implementation 'androidx.datastore:datastore-preferences:1.0.0'
+    implementation 'androidx.room:room-ktx:2.5.1'
     kapt 'androidx.room:room-compiler:2.5.1'
 
 
