--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,8 +73,8 @@ dependencies {
 
 
     // Coroutines
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.7.1'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.1'
 
 
     // Data and System
@@ -83,6 +83,7 @@ dependencies {
     implementation "io.coil-kt:coil-compose:2.2.0"
     implementation "com.google.accompanist:accompanist-coil:0.11.1"
     implementation "androidx.compose.runtime:runtime-livedata:1.4.3"
+    implementation "com.google.accompanist:accompanist-permissions:0.18.0"
 
     // UI
     implementation "androidx.compose.ui:ui:$compose_ui_version"
@@ -115,6 +116,11 @@ dependencies {
     implementation "androidx.compose.material3:material3-window-size-class:1.1.0"
     implementation "androidx.compose.material:material-icons-extended:1.4.3"
 
+    // CameraX
+    def camerax_version = "1.0.1"
+    implementation "androidx.camera:camera-camera2:$camerax_version"
+    implementation "androidx.camera:camera-lifecycle:$camerax_version"
+    implementation "androidx.camera:camera-view:1.3.0-alpha07"
 
 
     //**********************  TEST  ***********************//
