--- a/app/build.gradle
+++ b/app/build.gradle
@@ -108,6 +108,7 @@ dependencies {
     implementation 'androidx.room:room-runtime:2.5.1'
     implementation 'androidx.datastore:datastore-preferences:1.0.0'
     implementation 'androidx.room:room-ktx:2.5.1'
+    implementation 'androidx.vectordrawable:vectordrawable:1.1.0'
     kapt 'androidx.room:room-compiler:2.5.1'
 
     //Material 3
