--- a/app/build.gradle
+++ b/app/build.gradle
@@ -119,8 +119,8 @@ dependencies {
 
     // CameraX
     def camerax_version = "1.0.1"
-    implementation "androidx.camera:camera-camera2:$camerax_version"
-    implementation "androidx.camera:camera-lifecycle:$camerax_version"
+    implementation "androidx.camera:camera-camera2:1.2.3"
+    implementation "androidx.camera:camera-lifecycle:1.2.3"
     implementation "androidx.camera:camera-view:1.3.0-alpha07"
 
 
